--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <nav>
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
+        <a href="#" class="active">Home</a>
         <a href="#intro" onclick="myFunction()">Intro</a>
         <a href="#starting" onclick="myFunction()">Starting</a>
         <a href="#gallery" onclick="myFunction()">Gallery</a>
@@ -34,7 +34,7 @@
     <div id="wrapper">
         <section id="intro">
 
-            <h1>WHAT I'M GONNA SHOW YOU?</h1>
+            <h1 id="introh1">WHAT I'M GONNA SHOW YOU?</h1>
 
             <div class="grid-3">
 
