--- a/index.html
+++ b/index.html
@@ -73,16 +73,17 @@
 
         <div class="grid-2">
             <div class="col-2">
-                <img src="./img/Starting.png" alt="Man doing biceps curl ons Z bar">
+                <img src="./img/Starting.png" alt="Man doing biceps curl on Z bar">
             </div>
 
             <div class="col-2">
                 <div class="text">
                     <p>Starting a gym journey involves setting fitness goals and becoming familiar with equipment. Align objectives with weight loss, muscle gain, or overall health improvement and incorporate basic exercises targeting major muscle groups.</p>
-
+                    <br>
                     <p>Consistency is essential in fitness. Craft a schedule that fits your lifestyle, incorporating enjoyable activities for adherence. Seek guidance from a fitness professional for proper form and listen to your body by including rest days. Starting in the gym is gradual, requiring patience and celebrating small victories.</p>
-
+                    <br>
                     <p><button>Continue reading...</button></p>
+                    <br>
                 </div>
                 
             </div>
