--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <h1>THIS IS YOUR <span>GYM</span> PAGE</h1>
             <h1>YOU ARE GOING TO BE <span>FIT</span></h1>
         </div>
+        <a href="#intro" class="go-down">
+            <i class="fa fa-angle-down" aria-hidden="true"></i>
+        </a>
         
     </section>
 
