--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <title>Gym Lifestyle</title>
 </head>
@@ -15,7 +17,7 @@
         <a href="#intro" onclick="myFunction()">Intro</a>
         <a href="#starting" onclick="myFunction()">Starting</a>
         <a href="#gallery" onclick="myFunction()">Gallery</a>
-        <a href="#contact" onclick="myFunction()">Contact</a>
+        <a href="#routines" onclick="myFunction()">Routines</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
@@ -113,6 +115,137 @@
             </div>
         </section>
     </div>
+    <section id="routines">
+        <h1>ROUTINES</h1>
+        <div class="container">
+            <div class="accordion">
+              <div class="accordion-item" id="question1">
+                <a class="accordion-link" href="#question1">
+                  <div class="flex">
+                    <h3>FULL BODY</h3>
+                    <ul>
+                      <li>To get started (2-4 days)</li>
+                    </ul>
+                  </div>
+                  <i class="icon ion-md-arrow-forward"></i>
+                  <i class="icon ion-md-arrow-down"></i>
+                </a>
+                <div class="answer">
+                  <p> This routine is maker for begginners, it is based on training the entire body in the same day. It is usually done when you have two or four days to dedicate to the gym. One thing you have to keep in mind when looking for a routine like this is that you do different exercises every day, that you train the largest and most common muscle groups, but with different exercises. This is so that it is not monotonous and gives different stimuli to the muscles.</p>
+                </div>
+                <hr>
+            </div>
+              <div class="accordion-item" id="question2">
+                <a class="accordion-link" href="#question2">
+                  <div class="flex">
+                    <h3>UPPER AND LOWER</h3>
+                    <ul>
+                      <li>To get started (2-4 days)</li>
+                    </ul>
+                  </div>
+                  <i class="icon ion-md-arrow-forward"></i>
+                  <i class="icon ion-md-arrow-down"></i>
+                </a>
+                <div class="answer">
+                  <p> This routines is similar to the full body, but instead of training the entire body, you train the upper part (chest, back, arm) one day and the lower part (legs) the next day. As the last one, this routine it is usually done in two or four days in a week, lo importante es intercalar superior con inferior </p>
+                </div>
+                <hr>
+            </div>
+              <div class="accordion-item" id="question3">
+                <a class="accordion-link" href="#question3">
+                  <div class="flex">
+                    <h3>PPL</h3>
+                    <ul>
+                      <li>Intermediate level (3-4 days)</li>
+                    </ul>
+                  </div>
+                  <i class="icon ion-md-arrow-forward"></i>
+                  <i class="icon ion-md-arrow-down"></i>
+                </a>
+                <div class="answer">
+                  <p> The acronym of the name of this routine means push pull leg. This routine is a little more advanced, although it is easy to find plans for this routine all over the internet. It is based on doing pushes on the first day, that is, chest, triceps and shoulder. A second day of pulling, we refer to the back and biceps. And a third full leg day, although you can divide the leg into posterior and anterior, and thus do it on two different days. For this routine you need three days, or four if you split the leg.</p>
+                </div>
+                <hr>
+            </div>
+              <div class="accordion-item" id="question4">
+                <a class="accordion-link" href="#question4">
+                  <div>
+                    <h3>ARNOLD SPLIT</h3>
+                    <ul>
+                      <li>Intermediate level (3-4 days)</li>
+                    </ul>
+                  </div>
+                  <i class="icon ion-md-arrow-forward"></i>
+                  <i class="icon ion-md-arrow-down"></i>
+                </a>
+                <div class="answer">
+                  <p> The name of this routine comes from being the split of the famous bodybuilder and actor Arnold Schwarzenegger. The routine is similar to the previous one, the only thing that changes is that instead of doing pulls or pushes, you do one day with the back and chest alone and another with the arms alone, that is, biceps, triceps and shoulder. And the last leg day, which as I said in PPL, you can divide it into two days.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="accordion-item" id="question5">
+                <a class="accordion-link" href="#question5">
+                  <div class="flex">
+                    <h3>YOUR OWN</h3>
+                    <ul>
+                      <li>Advanced level</li>
+                    </ul>
+                  </div>
+                  <i class="icon ion-md-arrow-forward"></i>
+                  <i class="icon ion-md-arrow-down"></i>
+                </a>
+                <div class="answer">
+                  <p> This routine is done when you have sufficient knowledge about the exercises that you like the most and that work best for you, also when you know how to distribute them so that they suit you and are useful to you. It can be customized in the ways you want, based for example on the muscle groups that are weakest for you.</p>
+                </div>
+                <hr>
+            </div>
+           </div>
+          </div>
+    </section>
+    <footer id="footer">
+        <div class="container">
+            <div class="sobre-mi">
+                <h2 class="titulos-footer">Quienes somos</h2>
+                <p>FG - Programador Web Full Stack es un canal de YouTube donde se subirá el paso a paso de todos los proyectos de programación realizados por Federico Geretto. Nació en diciembre de 2022 con el objetivo de alcanzar y llegar a más personas.</p>
+                <ul class="redes-sociales">
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-tiktok"></i></i></a></li>
+                </ul>
+            </div>
+
+            <div class="navegacion">
+                <h2 class="titulos-footer">Menú de navegación</h2>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#starting">Starting</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#routines">Routines</a></li>
+                </ul>
+            </div>
+
+            <div class="contactanos">
+                <h2 class="titulos-footer">Contáctanos</h2>
+                <ul class="informacion-contacto">
+                    <li>
+                        <span><a href="https://www.google.com/maps/place/Av.+de+M%C3%A1laga,+29720+La+Cala+del+Moral,+M%C3%A1laga/@36.7155081,-4.3261603,15z/data=!3m1!4b1!4m6!3m5!1s0xd725a1b45f5e659:0x50afa0c52a4aae4b!8m2!3d36.7154923!4d-4.3077278!16s%2Fg%2F11xm35mfp?entry=ttu" target="_blank"><i class="fa-solid fa-location-dot"></i></a></span>
+                        <p>Avenida de Málaga <br> La Cala del Moral, Málaga (29720)</p>
+                    </li>
+
+                    <li>
+                        <span><i class="fa-solid fa-phone"></i></span>
+                        <p>+34 678 983 929 <br> +34 627 182 174</p>
+                    </li>
+
+                    <li>
+                        <span><i class="fa-solid fa-envelope"></i></span>
+                        <p>samu.av.jm18@gmail.com</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     <script src="./js/function.js"></script>
 </body>
 </html>
