--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
     <footer id="footer">
         <div class="container">
             <div class="sobre-mi">
-                <h2 class="titulos-footer">Quienes somos</h2>
-                <p>FG - Programador Web Full Stack es un canal de YouTube donde se subirá el paso a paso de todos los proyectos de programación realizados por Federico Geretto. Nació en diciembre de 2022 con el objetivo de alcanzar y llegar a más personas.</p>
+                <h2 class="titulos-footer">How I am</h2>
+                <p>I am a multiplatform application development student, who is passionate about the gym and computing, which is why I created this website about the gym.</p>
                 <ul class="redes-sociales">
-                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-tiktok"></i></i></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></i></a></li>
                 </ul>
             </div>
 
@@ -227,7 +227,7 @@
             </div>
 
             <div class="contactanos">
-                <h2 class="titulos-footer">Contáctanos</h2>
+                <h2 class="titulos-footer">Contact</h2>
                 <ul class="informacion-contacto">
                     <li>
                         <span><a href="https://www.google.com/maps/place/Av.+de+M%C3%A1laga,+29720+La+Cala+del+Moral,+M%C3%A1laga/@36.7155081,-4.3261603,15z/data=!3m1!4b1!4m6!3m5!1s0xd725a1b45f5e659:0x50afa0c52a4aae4b!8m2!3d36.7154923!4d-4.3077278!16s%2Fg%2F11xm35mfp?entry=ttu" target="_blank"><i class="fa-solid fa-location-dot"></i></a></span>
