--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@
 
             <div class="col-2">
                 <div class="text">
-                    <p>Starting a gym journey involves setting fitness goals and becoming familiar with equipment. Align objectives with weight loss, muscle gain, or overall health improvement and incorporate basic exercises targeting major muscle groups.</p>
+                    <p>Starting a gym journey involves setting fitness goals and becoming familiar with equipment. Align objectives with weight loss, muscle gain, or overall health improvement and incorporate basic exercises targeting major muscle groups<span id="dots">...</span><br><br><span id="more">Consistency is essential in fitness. Craft a schedule that fits your lifestyle, incorporating enjoyable activities for adherence. Seek guidance from a fitness professional for proper form and listen to your body by including rest days. Starting in the gym is gradual, requiring patience and celebrating small victories.</span></p>
                     <br>
-                    <p>Consistency is essential in fitness. Craft a schedule that fits your lifestyle, incorporating enjoyable activities for adherence. Seek guidance from a fitness professional for proper form and listen to your body by including rest days. Starting in the gym is gradual, requiring patience and celebrating small victories.</p>
-                    <br>
-                    <p><button>Continue reading...</button></p>
+                    <p><button onclick="Readmore()" id="readMore">Read more</button></p>
                     <br>
                 </div>
                 
@@ -246,6 +244,19 @@
                 </ul>
             </div>
         </div>
+        <div class="copy">
+            <button id="myBtn">Credits</button>
+
+            <div id="myModal" class="modal">
+
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>This page has been created for an educational purpose, the images have been extracted from <a href="https://www.pexels.com/search/gym/" target="_blank"><b>Pexel</b></a> and <a href="https://unsplash.com/es/s/fotos/gym" target="_blank"><b>Unsplash</b></a>, the authors of these images are diverse.</p>
+            </div>
+
+            </div>
+        </div>
+    </footer>
     <script src="./js/function.js"></script>
 </body>
 </html>
