--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <img src="./img/gallery3.jpg">
                 </div>
                 <div class="column">
-                  <img src="./img/gallery4.jpg">
+                  <img src="./img/gallery4.jpg" alt="Imagen">
                   <img src="./img/gallery6.jpg">
                   <img src="./img/gallery5.jpg">
                 </div>
