--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="text">
                         <h3>How can you start?</h3>
                         <br>
-                        <p>I am going to show you how I got started in the world of the gym. There are many paths through fitness and I am going to teach you how to choose the one you like the most and that suits you best.</p>
+                        <p>I am going to show you how I got started in the world of the gym. There are many paths through fitness and I am going to teach you how to choose the one you like the most and that suits you best</p>
                     </div>
                 </div>
                 
@@ -109,7 +109,7 @@
                   <img src="./img/gallery3.jpg">
                 </div>
                 <div class="column">
-                  <img src="./img/gallery4.jpg" alt="Imagen">
+                  <img src="./img/gallery4.jpg">
                   <img src="./img/gallery6.jpg">
                   <img src="./img/gallery5.jpg">
                 </div>
